--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@d4h/angular-http-cache",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": false,
-  "description": "Network caching interceptor for Angular HttpClient.",
+  "description": "Network caching interceptor and service for Angular HttpClient.",
   "homepage": "https://d4htechnologies.com/",
   "repository": {
     "type": "git",
